# QT-project

./: IMg.qrc  aiuiwindow.cpp  aiuiwindow.h  aiuiwindow.ui  camera.cpp  camera.h  camera.ui  carControl.pro  carControl.pro.user.849b349  login.cpp  login.h  login.ui  middlecontrol.cpp  middlecontrol.h  middlecontrol.ui  weather.cpp  weather.h  weather.ui  weatherDate.h  weatherTool.h  widget.cpp  widget.h  widget.ui
include/aiui/: AIUIConstant.h
libs/x64/: aiui.lib
libs/x86/: aiui.lib
samples/: samples.sln
samples/AIUI/assets/vtn/: vtn.ini
samples/AIUI/cfg/: aiui.cfg
samples/aiui_sample/: CMakeLists.txt  aiui_sample.vcxproj  aiui_sample.vcxproj.filters  readme.txt
samples/aiui_sample/src/: demo.cpp
samples/aiui_sample/src/jsoncpp/json/: config.h
samples/aiui_sample/src/utils/: ConvertUtil.cpp  IatResultUtil.cpp  IatResultUtil.h  StreamNlpTtsHelper.h
